--- a/discordrules.html
+++ b/discordrules.html
@@ -99,6 +99,10 @@ details p {
 	<p>Strictly no posting videos, images, gifs or files that intentionally crash Discord, or files that harmfully manipulate the Discord GUI or the computers or mobile devices of those using Discord in any way.</p>
 	<p>If you are a developer and want people to try out a game or program you are developing, you will have to confirm that the files you are sending are safe. This is to prevent the False Developer Scam from taking over other people's accounts.</p>
 </details>
+<details>
+	<summary>Piracy</summary>
+	<p>No posting embed links or files that are pirated distributions of any intellectual property.</p>
+</details>
 
 <h2>IV. Privacy</h2>
 <details>
@@ -158,22 +162,30 @@ details p {
 </p>
 
 <h2>VII. Moderation</h2>
-<p>Do not simply ask for staff. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open. Do not repeatedly beg superior staff for it.</p>
-<p>If you want to be promoted and you are staff, DM the owner about your request. Be serious about it. Do not repeatedly ask the owner about it.</p>
-<p>If you want someone else to be promoted or demoted, DM the owner about your request. Do not repeatedly ask the owner about it.</p>
-<p>There is no guarantee that you (or someone you want to be promoted) will be promoted after asking the owner about it.</p>
-<p>You will not be given Staff Immunity upon promotion. This means that you can be demoted as soon as you are promoted, once you make a violation.</p>
-<p>If you want to resign from staff or want to be demoted to a lower level of staff, DM the owner. However, you cannot simply ask to be demoted to trial staff, because that would cause a sort of promote-demote loop. The lowest form of staff you can ask for is normal staff. Do not repeatedly ask the owner about it. Once you make the request, you will not be promoted again unless you have been the highest voted for in a server election.</p>
-<p>Anyone caught demoting or promoting staff without the owner's consent or knowledge will be demoted and tempbanned without appeal. Anyone caught performing false mutes, warns, kicks or bans will be demoted and/or tempbanned.</p>
-<p>No creating, modifying, or deleting roles, channels, invites and categories without permission from the owner. No modifiying, adding or removing slowmode from a channel without the owner's consent. The level of moderation here is medium and has a 2FA requirement. You will be instantly demoted and permabanned without appeal if you are caught to have intentionally deleted an important server role. If accidental, you will be demoted and kicked.</p>
-<p>Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse. No creating emojis that violate the rules or remove already-existing emojis that you did not create.</p>
-<p>Do not timeout, mute, kick, ban, or perform any moderation commands on a person because of personal preference. Do not make up your own rules for the server. If you wish for a rule to be added, edited or removed, DM the owner.</p>
-<p>Be cautious for any accounts that are younger than 14 days old. If you detect any suspicious activity from the account, tempban or permaban the account immediately depending on the activities. Most of these accounts are usually alts, Dank Memer currency thieves, raid accounts, and the like. If someone joins, attempts to steal Dank Memer currency and then leaves, permaban them immediately without chance of appeal. If you see someone Nitro scam raiding or racist-advertising, permaban the user without hesitation or remorse. Delete all the user has said in the server within 24 hours.</p>
-<p>If someone wants to legitimately give away Nitro, use the alias "FN courtesy of" in the giveaway instead of "Free Nitro, courtesy of" to prevent an accidental mute. If the giveaway ends and the person does not confirm giving the Nitro to the winner, tempban the person for 7 days.</p>
-<p>No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference. Anyone caught trying to appeal a ban without the owner's knowledge will be demoted unless the reason is legitimate and has evidence to back up the appeal. Anyone caught trying to delete evidence for a ban will be demoted.</p>
-<p>Staff receive a temporary demote upon causing an infraction, with the duration of the demote dependent on the violation caused. Upon 3 or more infractions the targeted staff member is permanently demoted. Infractions are not appealable unless it is accidental, such as when swearing.
-However, if the level of the violation caused by the staff is extreme, staff will be immediately permabanned from the server.</p>
-<p>If you are caught ignoring a misbehaver and taking no actions even though you are well aware and are visibly active in the channels the person is misbehaving in, you will be warned or demoted. If you are joining the misbehaver, you will be warned and demoted.</p>
+<details>
+	<summary>Promotion and Demotion</summary>
+	<p>Do not simply ask for staff. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open. Do not repeatedly beg superior staff for it.</p>
+	<p>If you want to be promoted and you are staff, DM the owner about your request. Be serious about it. Do not repeatedly ask the owner about it.</p>
+	<p>If you want someone else to be promoted or demoted, DM the owner about your request. Do not repeatedly ask the owner about it.</p>
+	<p>There is no guarantee that you (or someone you want to be promoted) will be promoted after asking the owner about it.</p>
+	<p>If you want to resign from staff or want to be demoted to a lower level of staff, DM the owner. However, you cannot simply ask to be demoted to trial staff, because that would cause a promote-demote loop. The lowest form of staff you can ask for is normal staff. Do not repeatedly ask the owner about it. Once you make the request, you will not be promoted again unless you have been the highest voted for in a server election.</p>
+	<p>Anyone caught demoting or promoting staff without the owner's consent or knowledge will be demoted and tempbanned without appeal. Anyone caught performing false mutes, warns, kicks or bans will be demoted and/or tempbanned.</p>
+	<p>Staff receive a temporary demote upon causing an infraction, with the duration of the demote dependent on the violation caused. Upon 3 or more infractions the targeted staff member is permanently demoted. Infractions are not appealable unless it is accidental, such as when swearing. However, if the level of the violation caused by the staff is extreme, staff will be immediately permabanned from the server.</p>
+</details>
+<details>
+	<summary>Grace Period</summary>
+	<p>You will not be given Staff Immunity upon promotion. This means that you can be demoted as soon as you are promoted, once you make a violation.</p>
+</details>
+<details>
+	<summary>General</summary>
+	<p>No creating, modifying, or deleting roles, channels, invites and categories without permission from the owner. No modifiying, adding or removing slowmode from a channel without the owner's consent. The level of moderation here is medium and has a 2FA requirement. You will be instantly demoted and permabanned without appeal if you are caught to have intentionally deleted an important server role. If accidental, you will be demoted and kicked.</p>
+	<p>Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse. No creating emojis that violate the rules or remove already-existing emojis that you did not create.</p>
+	<p>Do not timeout, mute, kick, ban, or perform any moderation commands on a person because of personal preference. Do not make up your own rules for the server. If you wish for a rule to be added, edited or removed, DM the owner.</p>
+	<p>Be cautious for any accounts that are younger than 14 days old. If you detect any suspicious activity from the account, tempban or permaban the account immediately depending on the activities. Most of these accounts are usually alts, Dank Memer currency thieves, raid accounts, and the like. If someone joins, attempts to steal Dank Memer currency and then leaves, permaban them immediately without chance of appeal. If you see someone Nitro scam raiding or racist-advertising, permaban the user without hesitation or remorse. Delete all the user has said in the server within 24 hours.</p>
+	<p>If someone wants to legitimately give away Nitro, use the alias "FN courtesy of" in the giveaway instead of "Free Nitro, courtesy of" to prevent an accidental mute. If the giveaway ends and the person does not confirm giving the Nitro to the winner, tempban the person for 7 days.</p>
+	<p>No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference. Anyone caught trying to appeal a ban without the owner's knowledge will be demoted unless the reason is legitimate and has evidence to back up the appeal. Anyone caught trying to delete evidence for a ban will be demoted.</p>
+	<p>If you are caught ignoring a misbehaver and taking no actions even though you are well aware and are visibly active in the channels the person is misbehaving in, you will be warned or demoted. If you are joining the misbehaver, you will be warned and demoted.</p>
+</details>
 <p>If you notice any one of our staff misbehaving, report immediately to superior administration or directly to SciPred. False reports will be warned.</p>
 
 <h2>VIII. Giveaways</h2>
