slight spam change

--- a/discordrules.html
+++ b/discordrules.html
@@ -128,7 +128,7 @@ details p {
 </details>
 
 <h2>VI. Spam</h2>
-<p>Spam must only be done in the spam channel. Forms of spam include:
+<p>Spam must only be done in the spam channel. However, there are forms of disallowed spam, including:
 	<br>
 	- General Spam: malvertisement, ad scams, etc.
 	<br>
