--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ ul li a:hover {
 
 	<h4>Special Pages</h4>
 	<ul>
+	<li><a href="./aboutme.html" class="specs">About Me</a></li>
 	<li><a href="./discordrules.html" class="specs">Discord Server Rules</a></li>
 	</ul>
 	<h4>Normal Projects</h4>
@@ -105,8 +106,11 @@ function openNav() {
 	document.body.style.background = "black";
 	gTag("h3")[0].innerHTML = choose([
 		"...say, haven't I seen you before?",
+		"Be warned, this may be a waste of your time.",
+		"Can't really guarantee you'd find anything here interesting, though.",
 		"I don't know what you'd be doing here though.",
 		"Not sure what you can do here though.",
+		"Oh, a person. What was I to expect.",
 		"Though I doubt you'd find any of them interesting.",
 		"Well, that's it for now.",
 		"You can view them, or you can leave. It's up to you."
