--- a/aboutme.html
+++ b/aboutme.html
@@ -67,6 +67,14 @@ p {
     <p>Well, I guess I can disclose this one. It's science.mcpe@gmail.com, if you have any inquiries (or you maybe just want to send an email for fun.)</p>
 </details>
 <details>
+    <summary>Common Socials</summary>
+    <p>Discord: SciPred#4661. You can send direct messages at any time, but don't expect a response.</p>
+    <p>Reddit: u/SciPred. But I haven't been using that account for a while now, and I'm using an alt which I cannot disclose yet.</p>
+    <p>Twitter: SciPred, @scipreda. Don't confuse the name with the tag.</p>
+    <p>YouTube: SciPred, @SciPred. I think this should be obvious enough.</p>
+    <p>YouTube Minecraft Clips/Random Stuff: SkyPred, @skypred3676. No, I don't plan on changing that handle any time soon.</p>
+</details>
+<details>
     <summary>Age</summary>
     <p>I'm 17, which is right below the general age of consent.</p>
 </details>
@@ -83,7 +91,7 @@ p {
     <p>Minecraft (Java Edition), Geometry Dash.</p>
 </details>
 <details>
-    <summary>Games I Used To Play, Occasionally Play, or Checked Out For A While</summary>
+    <summary>Video/Web/Mobile/PC Games I Used To Play, Occasionally Play, or Checked Out For A While</summary>
     <ol>
         <li>2048</li>
         <li>2048 Bricks</li>
@@ -99,7 +107,9 @@ p {
         <li>Bad Ice Cream</li>
         <li>Bad Ice Cream 2</li>
         <li>Bad Ice Cream 3</li>
+        <li>Baldi's Basics Classic Remastered</li>
         <li>Baldi's Basics in Education and Learning</li>
+        <li>Baldi's Basics Plus</li>
         <li>Bird 420 - MLG Flappy edition</li>
         <li>black (game)</li>
         <li>Blackbox - brain puzzles</li>
@@ -111,6 +121,7 @@ p {
         <li>Candy Crush Soda Saga</li>
         <li>chess.com</li>
         <li>Clash Royale</li>
+        <li>Click the Colour and Not the Word</li>
         <li>cmplt</li>
         <li>Color Ballz</li>
         <li>Color Fence - Mind Puzzler</li>
@@ -119,18 +130,23 @@ p {
         <li>Crab Game</li>
         <li>Crossy Road</li>
         <li>diep.io</li>
+        <li>doge2048.com</li>
         <li>Dots & Co: A Puzzle Adventure</li>
         <li>DUAL!</li>
         <li>Egg, Inc.</li>
         <li>Endless Sky</li>
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
+        <li>Feed The Head</li>
         <li>Fit In The Hole</li>
         <li>Flappy Bird</li>
+        <li>flappy-2048.com</li>
         <li>Flow Free</li>
         <li>Fortnite</li>
         <li>FPS Chess</li>
         <li>Fruit Ninja</li>
+        <li>gameaboutsquares.com</li>
+        <li>Garry's Mod</li>
         <li>Gauntlet of Ire</li>
         <li>Genshin Impact</li>
         <li>Geometry Dash Lite</li>
@@ -138,8 +154,10 @@ p {
         <li>Geometry Dash Subzero</li>
         <li>Geometry Dash World</li>
         <li>Getting Over It</li>
+        <li>gettoz.com</li>
         <li>Gravity Switch</li>
         <li>green (game)</li>
+        <li>Grey-Box Testing</li>
         <li>Groo - Endless Swipe Puzzle</li>
         <li>Grumpy Cat's Worst Game Ever</li>
         <li>GunCrafter</li>
@@ -154,11 +172,12 @@ p {
         <li>Little Alchemy</li>
         <li>Little Alchemy 2</li>
         <li>Lords Mobile: Kingdom Wars</li>
+        <li>LSD: Dream Emulator</li>
         <li>Make Them Fall</li>
         <li>Meme Clicker - MLG Christmas</li>
         <li>Meme Crush - MLG Kush edition</li>
         <li>Merge Town!</li>
-        <li>Minecraft (Bedrock Edition, Education Edition, Pocket Edition, Xbox 360 Edition)</li>
+        <li>Minecraft (Bedrock Edition, Education Edition, Pocket Edition, VR, Xbox 360 Edition)</li>
         <li>Minesweeper</li>
         <li>Minesweeper Classic: Retro</li>
         <li>Mini DAYZ: Zombie Survival</li>
@@ -187,6 +206,7 @@ p {
         <li>QT</li>
         <li>Really Bad Chess</li>
         <li>red (game)</li>
+        <li>Rings 4x4 - Shapes Mania</li>
         <li>Robbery Bob</li>
         <li>Robbery Bob 2: Double Trouble</li>
         <li>Roblox</li>
@@ -201,6 +221,7 @@ p {
         <li>Snake VS Block</li>
         <li>Soul Knight</li>
         <li>Splashy Dots</li>
+        <li>spotthedifference.com</li>
         <li>Subway Surfers</li>
         <li>Suite 776</li>
         <li>Tadpole Tap</li>
@@ -216,6 +237,7 @@ p {
         <li>Trap Adventure</li>
         <li>Trap Adventure 2</li>
         <li>Two Dots</li>
+        <li>Untitled Goose Game</li>
         <li>Vlogger Go Viral: Tuber Life</li>
         <li>White Tiles - MLG Get Rekt edition</li>
         <li>Word Cookies!</li>
