--- a/aboutme.html
+++ b/aboutme.html
@@ -44,6 +44,11 @@ p {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
+p, ol li {
+    text-align: left;
+    margin-left: 30px;
+    margin-right: 30px;
+}
 </style>
 </head>
 <body>
