--- a/aboutme.html
+++ b/aboutme.html
@@ -107,6 +107,7 @@ p, ol li {
         <li>Among Us!</li>
         <li>Angry Birds</li>
         <li>Angry Birds 2</li>
+        <li>Ao Oni</li>
         <li>Arrow.io</li>
         <li>Atomas</li>
         <li>Bad Ice Cream</li>
@@ -115,6 +116,7 @@ p, ol li {
         <li>Baldi's Basics Classic Remastered</li>
         <li>Baldi's Basics in Education and Learning</li>
         <li>Baldi's Basics Plus</li>
+        <li>Bendy and the Ink Machine</li>
         <li>Bird 420 - MLG Flappy edition</li>
         <li>black (game)</li>
         <li>Blackbox - brain puzzles</li>
@@ -124,9 +126,12 @@ p, ol li {
         <li>Candy Crush Jelly Saga</li>
         <li>Candy Crush Saga</li>
         <li>Candy Crush Soda Saga</li>
+        <li>Cards Against Humanity</li>
+        <li>Cat Mario (Syobon Action)</li>
         <li>chess.com</li>
         <li>Clash Royale</li>
         <li>Click the Colour and Not the Word</li>
+        <li>Clustertruck</li>
         <li>cmplt</li>
         <li>Color Ballz</li>
         <li>Color Fence - Mind Puzzler</li>
@@ -134,8 +139,10 @@ p, ol li {
         <li>Cookie Clicker</li>
         <li>Crab Game</li>
         <li>Crossy Road</li>
+        <li>Cuphead</li>
         <li>diep.io</li>
         <li>doge2048.com</li>
+        <li>Doki Doki Literature Club</li>
         <li>Dots & Co: A Puzzle Adventure</li>
         <li>DUAL!</li>
         <li>Egg, Inc.</li>
@@ -143,6 +150,12 @@ p, ol li {
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
         <li>Feed The Head</li>
+        <li>Fireboy and Watergirl in the Forest Temple</li>
+        <li>Fireboy and Watergirl 2: In the Light Temple</li>
+        <li>Fireboy and Watergirl 3: In the Ice Temple</li>
+        <li>Fireboy and Watergirl 4: In the Crystal Temple</li>
+        <li>Fireboy and Watergirl 5: Elements</li>
+        <li>Fireboy and Watergirl 6: Fairy Tales</li>
         <li>Fit In The Hole</li>
         <li>Flappy Bird</li>
         <li>flappy-2048.com</li>
@@ -151,6 +164,7 @@ p, ol li {
         <li>FPS Chess</li>
         <li>Fruit Ninja</li>
         <li>gameaboutsquares.com</li>
+        <li>Gang Beasts</li>
         <li>Garry's Mod</li>
         <li>Gauntlet of Ire</li>
         <li>Genshin Impact</li>
@@ -165,14 +179,21 @@ p, ol li {
         <li>Grey-Box Testing</li>
         <li>Groo - Endless Swipe Puzzle</li>
         <li>Grumpy Cat's Worst Game Ever</li>
+        <li>Gum Drop Hop</li>
+        <li>Gum Drop Hop 2</li>
+        <li>Gum Drop Hop 3</li>
+        <li>Gum Drop Hop 4</li>
         <li>GunCrafter</li>
+        <li>Hand Simulator</li>
         <li>Happy Wheels</li>
+        <li>Hello Neighbor</li>
         <li>I Love Hue Too</li>
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
         <li>It Steals</li>
         <li>Just A Few More Doors</li>
         <li>Just More Doors</li>
+        <li>Just Shapes and Beats</li>
         <li>Levers</li>
         <li>Little Alchemy</li>
         <li>Little Alchemy 2</li>
@@ -189,13 +210,17 @@ p, ol li {
         <li>Money Tree: Business Tycoon</li>
         <li>Monster Legends: Collect them!</li>
         <li>MonsterCrafter</li>
+        <li>Monstrum</li>
         <li>Monument Valley</li>
         <li>Monument Valley 2</li>
+        <li>Muddy Heights</li>
+        <li>Muddy Heights 2</li>
         <li>Not Not</li>
         <li>osu!</li>
         <li>Pac-Man</li>
         <li>PAC-MAN 256</li>
-        <li>Pewdiepie's Tuber Simulator</li>
+        <li>PewDiePie's Tuber Simulator</li>
+        <li>PewDuckPie</li>
         <li>Phases</li>
         <li>Piano Tiles</li>
         <li>Piano Tiles 2</li>
@@ -209,6 +234,7 @@ p, ol li {
         <li>Pokemon Go</li>
         <li>PUBG Mobile</li>
         <li>QT</li>
+        <li>Raft</li>
         <li>Really Bad Chess</li>
         <li>red (game)</li>
         <li>Rings 4x4 - Shapes Mania</li>
@@ -218,6 +244,7 @@ p, ol li {
         <li>Rolly Vortex</li>
         <li>Scribblenauts Remix</li>
         <li>Scribblenauts Unlimited</li>
+        <li>Sexy Hiking</li>
         <li>Shotgun King: The Final Checkmate</li>
         <li>Skyward</li>
         <li>slither.io</li>
@@ -226,6 +253,7 @@ p, ol li {
         <li>Snake VS Block</li>
         <li>Soul Knight</li>
         <li>Splashy Dots</li>
+        <li>Spooky's Jump Scare Mansion</li>
         <li>spotthedifference.com</li>
         <li>Subway Surfers</li>
         <li>Suite 776</li>
@@ -236,21 +264,31 @@ p, ol li {
         <li>Tetris</li>
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
+        <li>The Looker</li>
         <li>The Quest Keeper</li>
         <li>The Useless Game!</li>
+        <li>The Witness</li>
         <li>Tomb of the Mask</li>
         <li>Trap Adventure</li>
         <li>Trap Adventure 2</li>
+        <li>Trollface Quest</li>
+        <li>Trollface Quest 2</li>
+        <li>Trollface Quest 3</li>
+        <li>Trollface Quest 4</li>
+        <li>Trollface Quest 5</li>
+        <li>Trolltube</li>
         <li>Two Dots</li>
         <li>Untitled Goose Game</li>
         <li>Vlogger Go Viral: Tuber Life</li>
         <li>White Tiles - MLG Get Rekt edition</li>
         <li>Word Cookies!</li>
         <li>Wordscapes</li>
+        <li>World's Hardest Game</li>
+        <li>Yandere Simulator</li>
         <li>yellow (game)</li>
         <li>yorg.io</li>
     </ol>
-    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child.</h4>
+    <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games.</h4>
 </details>
 <h2>This site was last updated on December 6, 2022.</h2>
 </body>
